optimize profile leanks to use infinite scroll
